--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "format": "npx prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@solana/web3.js": "^1.87.6",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -18,5 +21,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
   }
 }
