--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "dev": "nodemon server.js",
     "format": "npx prettier --write ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
     "@solana/web3.js": "^1.87.6",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
